--- a/Formulario.html
+++ b/Formulario.html
@@ -63,7 +63,7 @@
                 <br><br>
 
                 <input type="checkbox" id="musculacion" name="salas[]" value="Sala de musculación">
-                <label for="musculacion">Sala de musculación</label>ç
+                <label for="musculacion">Sala de musculación</label>
                 <br><br>
 
                 <input type="checkbox" id="spinning" name="salas[]" value="Sala de spinning">
